Remove explicit height from comment-list to stop overflow on short pages

--- a/client/src/components/CommentApp/main.scss
+++ b/client/src/components/CommentApp/main.scss
@@ -176,7 +176,6 @@ $box-padding: 10px;
 }
 
 .comments-list {
-    height: 100vh;
     width: 400px;
     position: absolute;
     top: 30px;
